--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     </title>
 </head>
 <body>
+    <center>
 
+        <div class="container" style="width: 900px; height: 500px;">
+            <h1 style="background-color: black; color: green;">
+                This a heading with inline css changing background and font color
+            </h1>
+            <p style="background-color:lavender; color:mediumslateblue; font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 150%;">
+                This a paragraph with inline css changing the font family, color and background.
+            </p>
+            <p style="background-color: beige; padding-left: 100px; margin-top:100px;">
+                This is a paragraph with changes in padding, margin and bg color
+            </p>
+        </div>
+    </center>
 </body>
 </html>
